add logic to save user test to database
document feature with swagger

save user test
